<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registrar_carros"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.customlistview.RegistrarCarros">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtTitulo"
            android:textSize="24dp"
            android:hint="@string/RegistroCarros"
            android:text="@string/RegistroCarros"
            android:textAlignment="center" />

        <TextView
            android:text="@string/Placa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:hint="@string/Placa" />

        <EditText
            android:layout_width="140dp"
            android:layout_height="31dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtPlaca" />

        <TextView
            android:text="@string/Marca"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" />

        <Spinner
            android:layout_width="169dp"
            android:layout_height="wrap_content"
            android:id="@+id/spiMarca" />

        <TextView
            android:text="@string/Modelo"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" />

        <Spinner
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:id="@+id/spiModelo" />

        <TextView
            android:text="@string/Color"
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" />

        <Spinner
            android:layout_width="142dp"
            android:layout_height="wrap_content"
            android:id="@+id/spiColor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:text="@string/Precio" />

        <EditText
            android:id="@+id/txtPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/Guardar"
                android:onClick="registrar"
                android:text="@string/Guardar" />

            <Button
                android:id="@+id/btnBorrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/Borrar"
                android:onClick="borrar"
                android:text="@string/Borrar" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
